# macros

./: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  run_all.sh
api/: .env  Cargo.toml
api/migrations/2020-10-03-223721_macro/: down.sql  up.sql
api/src/: data.rs  main.rs
api/src/db/: mod.rs  models.rs  schema.rs
nginx/: nginx.conf
react/: .env.development  .env.production  package-lock.json  package.json
react/public/: index.html
react/src/: App.test.tsx  MacroCard.tsx  MacroList.tsx  SiteDrawer.tsx  serviceWorker.ts  setupTests.ts
src/: App.test.tsx  App.tsx  SiteDrawer.tsx  index.tsx  react-app-env.d.ts  serviceWorker.ts
systemd/: api.service  ui.service
