[package]
name = "api"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0.116"
serde_json = "1.0.58"
rocket_cors = "0.5.2"
anyhow = "1.0.32"
